Add Java 25 FFMLib foundation